delivery-infra/k8s/delivery-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-app
  namespace: dev01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delivery-app-backend
  template:
    metadata:
      labels:
        app: delivery-app-backend
    spec:
      containers:
        - name: delivery-app-backend
          image: nkantartzopoulos/delivery-app-backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: delivery-app-backend-service
  namespace: dev01
spec:
  type: NodePort
  selector:
    app: delivery-app-backend
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30081  # You can choose a port between 30000–32767

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: delivery-app-postgres
  namespace: dev01
spec:
  serviceName: delivery-app-postgres
  replicas: 1
  selector:
    matchLabels:
      app: delivery-app-postgres
  template:
    metadata:
      labels:
        app: delivery-app-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: k8s-delivery-postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: k8s-delivery-postgres-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: delivery-app-postgres
  namespace: dev01
spec:
  selector:
    app: delivery-app-postgres
  ports:
    - port: 5432
